--- a/1.4/order.html
+++ b/1.4/order.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Order</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="noticia1">
-      <img src="http://placehold.it/200x100" alt="imagen1" title="image1">
-      <h1>Notia 1</h1>
-      <p>La notia 1 nos cuenta...</p>
+<head>
+  <meta charset="utf-8">
+  <title>Order</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="containerCenter">
+    <div class="noticiaHeader">
+      <img src="http://placehold.it/200x50" alt="imagen1" title="image1">
+      <h1>Noticia 1</h1>
+      <p>La Noticia 1 nos cuenta...</p>
     </div>
-    <div class="colums">
-      <div class="noticia2">
-        <img src="http://placehold.it/200x100" alt="imagen2" title="image2">
-        <h1>Notia 2</h1>
-        <p>La notia 2 nos cuenta...</p>
+    <div class="columns">
+      <div class="noticia">
+        <img src="http://placehold.it/200x50" alt="imagen2" title="image2">
+        <h1>Noticia 2</h1>
+        <p>La Noticia 2 nos cuenta...</p>
       </div>
-      <div class="noticia3">
-        <img src="http://placehold.it/200x100" alt="imagen3" title="image3">
-        <h1>Notia 3</h1>
-        <p class="parrafo">La notia 3 nos cuenta...</p>
+      <div class="noticia">
+        <img src="http://placehold.it/200x50" alt="imagen3" title="image3">
+        <h1>Noticia 3</h1>
+        <p class="parrafo">La Noticia 3 nos cuenta...</p>
       </div>
-      <div class="noticia4">
-        <img src="http://placehold.it/200x100" alt="imagen4" title="image4">
-        <h1>Notia 4</h1>
-        <p>La notia 4 nos cuenta...</p>
+      <div class="noticia">
+        <img src="http://placehold.it/200x50" alt="imagen4" title="image4">
+        <h1>Noticia 4</h1>
+        <p>La Noticia 4 nos cuenta...</p>
       </div>
-      <div class="noticia5">
-        <img src="http://placehold.it/200x100" alt="imagen5" title="image5">
-        <h1>Notia 5</h1>
-        <p>La notia 5 nos cuenta...</p>
+      <div class="noticia">
+        <img src="http://placehold.it/200x50" alt="imagen5" title="image5">
+        <h1>Noticia 5</h1>
+        <p>La Noticia 5 nos cuenta...</p>
       </div>
     </div>
-    </body>
+  </div>
+</body>
 </html>
