Cambio en la clase de fixedHeader

--- a/proyecto-final-movil/index.html
+++ b/proyecto-final-movil/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <div class="fixedheader">
+    <div class="fixedHeader">
     <span class="header1">
         <h1>The green ladies</h1>
     </span>
