--- a/Prueba 1 en casa/index.html
+++ b/Prueba 1 en casa/index.html
@@ -10,11 +10,17 @@
 </head>
 <body>
   <header class="header">
-    <a href="http://www.adalab.es/"><img class="adalab" src="logo_adalab_155x61.png" alt="logo Adalab"></a>
+    <a href="http://www.adalab.es/">
+      <img class="adalab" src="logo_adalab_155x61.png" alt="logo Adalab">
+    </a>
     <nav class="headerLinks">
       <ul class="listLinks">
-        <li class="links"><a href="#">Blog</a></li>
-        <li class="links"><a href="#">Contacto</a></li>
+        <li class="links">
+          <a href="#">Blog</a>
+        </li>
+        <li class="links">
+          <a href="#">Contacto</a>
+        </li>
       </ul>
     </nav>
   </header>
