--- a/proyecto-final-movil/contacto.html
+++ b/proyecto-final-movil/contacto.html
@@ -14,20 +14,28 @@
     <span class="header1">
         <h1>The green ladies</h1>
       </span>
-      <nav>
+      <nav class="menu-sub">
         <ul class="flex-list">
           <li class="item" ><a class="a-header" href="index.html#equipo"  title="Ir a Equipo">Equipo</a></li>
-          <li class="item" ><a class="a-header" href="index.html#quienes"  title="Ir a Quienes somos">Quienes somos</a></li>
+          <li class="item" ><a class="a-header" href="index.html#quienes"  title="Ir a Quienes somos">Quienes somos</a>
+            <ul>
+              <li><a href="#estefania">Estefania Salgado</a></li>
+              <li><a href="#irene">Irene Ordóñez</a></li>
+              <li><a href="#ester">Ester González</a></li>
+              <li><a href="#sandra">Sandra García</a></li>
+            </ul>
+          </li>
           <li class="item" ><a class="a-header" href="#contacto" title="Ir a Contacto">Contacto</a></li>
         </ul>
       </nav>
     </div>
   </header>
   <main>
+      <div id="contacto"></div>
     <div class="headerImage"></div>
     <section>
       <div class="container">
-        <h2 class="titles-section" id="contacto">Contacto</h2>
+        <h2 class="titles-section" >Contacto</h2>
         <p class="explicacion">Rellena el formulario que encontrarás a continuación y estaremos encantadas de responderte lo antes posible<br>¡Gracias!</br></p>
         <p class="frase">Todos los campos marcados con <text class="asterisco">*</text> son obligatorios.</p>
       </div>
